--- a/gmailLogin/pom.xml
+++ b/gmailLogin/pom.xml
@@ -26,5 +26,10 @@
     	<artifactId>selenium-server</artifactId>
     	<version>3.0.1</version>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.poi</groupId>
+    	<artifactId>poi-ooxml</artifactId>
+    	<version>3.14</version>
+    </dependency>
   </dependencies>
 </project>
